2010-12-15  Andreas Kling  <andreas.kling@nokia.com>

Reviewed by Antonio Gomes.

        [Qt] screenIsMonochrome() is broken
        https://bugs.webkit.org/show_bug.cgi?id=49957

        * platform/qt/PlatformScreenQt.cpp:
        (WebCore::screenIsMonochrome):

Canonical link: https://commits.webkit.org/64484@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74137 268f45cc-cd09-0410-ab3c-d52691b4dbfc