WebCore/platform/qt/PlatformScreenQt.cpp
@@ -86,7 +86,7 @@ int screenDepthPerComponent(Widget* w)
 
 bool screenIsMonochrome(Widget* w)
 {
-    return QApplication::desktop()->screen(screenNumber(w))->numColors() < 2;
+    return QApplication::desktop()->screen(screenNumber(w))->colorCount() == 2;
 }
 
 FloatRect screenRect(Widget* w)
